--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ env:
   variables:
     AWS_REGION: "ap-south-1"   # Your AWS Region (e.g., us-east-1)
     # ECR URI includes your AWS Account ID and region, e.g., 123456789012.dkr.ecr.ap-south-1.amazonaws.com
-    ECR_URI: "<961581626265>.dkr.ecr.<YOUR_AWS_REGION>.amazonaws.com"
+    ECR_URI:  "961581626265.dkr.ecr.ap-south-1.amazonaws.com"
     ECR_REPO_NAME: "springboot-restful-webservices" # The name of your ECR repository
     EKS_CLUSTER_NAME: "Chinna_cluster1" # The name of your EKS cluster
 
