--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,16 @@
-version: 0.2
-
-phases:
-  build:
-    commands:
-      - mvn clean package
-      - echo "Build completed"
-
-artifacts:
-  files:
-    - appspec.yml
-    - scripts/**/*
-    - target/springboot-restful-webservices-0.0.1-SNAPSHOT.jar
+  version: 0.2
+  phases:
+    install:
+      runtime-versions:
+        java: corretto17
+    build:
+      commands:
+        - mvn -B -DskipTests package
+        - mkdir -p artifact
+        - cp target/*-SNAPSHOT.jar artifact/app.jar || cp target/*.jar artifact/app.jar
+  artifacts:
+    files:
+      - appspec.yml
+      - scripts/**/*
+      - artifact/app.jar
+    discard-paths: yes
