--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,18 @@
 
 	<build>
 		<plugins>
-			<plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.12.1</version>
+				</plugin>
+
+				<plugin>
+
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.12.1</version>
 				<configuration>
 					<source>17</source>
 					<target>17</target>
@@ -70,5 +79,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>springboot-restful-webservices</finalName>
 	</build>
 </project>
