--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,13 +16,13 @@ spec:
     spec:
       containers:
         - name: springboot-app
-          image: yourdockerhub/springboot-restful-webservices:latest
+          image: 961581626265.dkr.ecr.ap-south-1.amazonaws.com/springboot-restful-webservices:latest
           ports:
             - containerPort: 8080
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:mysql://<your-db-host>:3306/user_management
+              value: jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
             - name: SPRING_DATASOURCE_USERNAME
               value: root
             - name: SPRING_DATASOURCE_PASSWORD
-              value: MySQL@12345
+              value: MySQL12345
