--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.application.name=springboot-restful-webservices
 #spring.datasource.url=jdbc:mysql://chinna-db.ap-south-1.rds.amazonaws.com:3306/user_management
 
 spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
-spring.datasource.username=root
-spring.datasource.password=MYSQL12345
+spring.datasource.username=springuser
+spring.datasource.password=Spring@123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
