--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=springboot-restful-webservices
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/user_management
-#spring.datasource.username=root
-#spring.datasource.password=MySQL@12345
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management
+spring.datasource.username=root
+spring.datasource.password=MySQL@12345
+spring.jpa.open-in-view=false
+
 #spring.datasource.url=jdbc:mysql://chinna-db.ap-south-1.rds.amazonaws.com:3306/user_management
 
-spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
-spring.datasource.username=springuser
-spring.datasource.password=Spring@123
+#spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
+#spring.datasource.username=root
+#spring.datasource.password=MYSQL12345
+#server.port=9090
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.port=8080
