--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: app.jar
+  - source: artifact/app.jar
     destination: /home/ec2-user/app
   - source: scripts/
     destination: /home/ec2-user/app/scripts
