--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 spring.application.name=springboot-restful-webservices
-
-spring.datasource.url=jdbc:mysql://localhost:3306/user_management
-spring.datasource.username=root
-spring.datasource.password=MySQL@12345
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
+spring.datasource.username=springuser
+spring.datasource.password=Spring@123
 spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=8080
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
+#spring.datasource.username=springuser
+#spring.datasource.password=Spring@123
+#spring.jpa.open-in-view=false
 
 #spring.datasource.url=jdbc:mysql://chinna-db.ap-south-1.rds.amazonaws.com:3306/user_management
 
@@ -12,8 +23,9 @@ spring.jpa.open-in-view=false
 #spring.datasource.password=MYSQL12345
 #server.port=9090
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=8080
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#server.port=8080
