--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
 			<version>8.0.1.Final</version>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.1.0</version>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 
 	<build>
