--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=springboot-restful-webservices
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
-spring.datasource.username=springuser
-spring.datasource.password=Spring@123
-spring.jpa.open-in-view=false
 
+spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
+spring.datasource.username=root
+spring.datasource.password=MYSQL12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -11,8 +13,35 @@ spring.jpa.show-sql=true
 server.port=8080
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#spring.application.name=springboot-restful-webservices
 #spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
 #spring.datasource.username=springuser
+#spring.datasource.password=Spring@123
+#spring.jpa.open-in-view=false
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+#server.port=8080
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
+#spring.datasource.username=root
 #spring.datasource.password=Spring@123
 #spring.jpa.open-in-view=false
 
