--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
 					<mainClass>net.javaguides.springboot.SpringbootRestfulWebservicesApplication</mainClass>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
 		</plugins>
 		<finalName>springboot-restful-webservices</finalName>
 	</build>
