--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=springboot-restful-webservices
 
-spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
+#spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+
 spring.datasource.username=root
-spring.datasource.password=MySQL12345
+spring.datasource.password=MySQL@12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=false
@@ -14,6 +16,7 @@ server.port=8080
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
 
 
 
