--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot-restful-webservices
 
-#spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
-spring.datasource.url=jdbc:mysql://localhost:3306/user_management?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazonaws.com:3306/user_management
+#spring.datasource.url=jdbc:mysql://localhost:3306/user_management?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=MySQL@12345
