--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://chinna-db.c5e48eui694i.ap-south-1.rds.amazona
 #spring.datasource.url=jdbc:mysql://localhost:3306/user_management?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=MySQL@12345
+spring.datasource.password=MySQL12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=false
